<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_notes">

    <fragment
        android:id="@+id/nav_notes"
        android:name="com.example.keepinmind.ui.fragments.NotesFragment"
        android:label="@string/menu_notes"
        tools:layout="@layout/fragment_notes" />

    <fragment
        android:id="@+id/nav_post"
        android:name="com.example.keepinmind.ui.fragments.PostFragment"
        android:label="@string/menu_in_mind"
        tools:layout="@layout/fragment_post"/>

    <fragment
        android:id="@+id/nav_feed"
        android:name="com.example.keepinmind.ui.fragments.FeedFragment"
        android:label="@string/menu_feed"
        tools:layout="@layout/fragment_feed" />
</navigation>