<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:gravity="bottom"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/nav_header_edit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/nav_header_person_image"
        app:layout_constraintBottom_toBottomOf="@id/nav_header_person_image"
        app:layout_constraintEnd_toEndOf="parent"
        android:src="@drawable/ic_baseline_edit_24"
        android:padding="8dp"/>

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@+id/nav_header_person_image"
        android:layout_width="50dp"
        android:layout_height="50dp"
        app:riv_corner_radius="30dp"
        app:riv_mutate_background="true"
        app:riv_tile_mode="clamp"
        app:riv_oval="false"
        app:riv_border_width="3dp"
        app:riv_border_color="@color/black"
        android:contentDescription="@string/nav_header_desc"
        android:src="@drawable/ic_baseline_account_circle_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintDimensionRatio="1:1"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@id/nav_header_person_name"/>

    <TextView
        android:id="@+id/nav_header_person_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/nav_header_vertical_spacing"
        android:text="@string/app_name"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@id/nav_header_person_account"/>

    <TextView
        android:id="@+id/nav_header_person_account"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/user_not_registered"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>